<resources>
    <string name="app_name">MEDIATECH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescription">Image description</string>
    <string name="passwordBoxContent">Password…</string>
    <string name="userBoxContent">Username…</string>
    <string name="buttonConnexionContent">Connexion</string>
    <string name="buttonForgottenPWDContent">Mot de passe oublié ?</string>

    <string name="emailRecoverContent">Entrez votre adresse e-mail…</string>
    <string name="validateRecoverContent">Valider</string>


    <string name="dashboardStats">Statistiques (30 derniers jours)</string>
    <string name="dashboardTypeStats">(Abonnés)</string>
    <string name="dashboardAccessbtn">Accéder</string>
    <string name="dashboardTitle">Bienvenue Anthony</string>

    <string name="burgerMenu1stOption">Accueil</string>
    <string name="burgerMenu2ndOption">Création de posts</string>
    <string name="burgerMenu3rdOption">Calendrier</string>
    <string name="burgerMenu4thOption">Paramètres</string>
    <string name="burgerMenu5thOption">Se déconnecter</string>


    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="PostBodyContent">Corps du post</string>
    <string name="PostDateContent">Date du post</string>
    <string name="img_sky_background">Sky</string>
    <string name="fgt_postcrt_media">Lien du média</string>
    <string name="img_back_arrow">back arrow</string>
    <string name="slash">/</string>

</resources>