<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/back_dashboard"
            android:title=""
            android:icon="@drawable/ic_baseline_arrow_back_ios_24" />
        <item
            android:id="@+id/dashboardFragment"
            android:title="@string/burgerMenu1stOption" />
        <item
            android:id="@+id/editionFragment"
            android:title="@string/burgerMenu2ndOption" />
        <item
            android:id="@+id/calendarFragment"
            android:title="@string/burgerMenu3rdOption" />
        <item
            android:id="@+id/settingsFragment"
            android:title="@string/burgerMenu4thOption" />
        <item
            android:id="@+id/deconnexion"
            android:title="@string/burgerMenu5thOption" />
    </group>
</menu>