<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connexion_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".models.fragments.ConnexionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/connexion_upper_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteY="146dp">

        <ImageView
            android:id="@+id/connexion_main_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/connexion_cpme_logo"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/cpmelogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/connexion_lower_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5">

        <EditText
            android:id="@+id/connexion_user_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/userBoxContent"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/placeholderColor"
            android:textColorHint="@color/placeholderColor"
            app:layout_constraintBottom_toTopOf="@+id/connexion_password_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/connexion_password_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/passwordBoxContent"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/placeholderColor"
            app:layout_constraintBottom_toTopOf="@+id/connexion_connect_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connexion_user_box"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/connexion_connect_btn"
            style="@style/mediatech.btn"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:elevation="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/buttonConnexionContent"
            android:textColor="@color/cpmeMainRed"
            android:textSize="17sp"
            app:backgroundTint="#EEEEEE"
            app:layout_constraintBottom_toTopOf="@+id/connexion_forgot_pwd_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connexion_password_box" />

        <Button
            android:id="@+id/connexion_forgot_pwd_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/buttonForgottenPWDContent"
            app:backgroundTint="@null"
            android:textColor="#1C5F78"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connexion_connect_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>