<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    tools:context=".models.views.LostFragmentPassword">

    <ImageView
        android:id="@+id/fgt_pwd_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:contentDescription="@string/contentDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/boxes_shape"
        android:backgroundTint="#FEFEFE"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fgt_pwd_back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:alpha="0.75"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fgt_pwd_email_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/emailRecoverContent"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/placeholderColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/fgt_pwd_validate_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,TextFields" />

        <Button
            android:id="@+id/fgt_pwd_validate_btn"

            style="@style/mediatech.btn"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/validateRecoverContent"
            android:textColor="@color/cpmeMainRed"
            android:textSize="18sp"
            app:backgroundTint="#EEEEEE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgt_pwd_email_box" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>