<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|left"
    android:elevation="4dp"
    tools:context=".models.PostCreationFragment">

    <ImageView
        android:id="@+id/post_creation_iv_sky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:background="@drawable/boxes_shape"
        android:backgroundTint="#FEFEFE"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/fgt_back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:alpha="0.75"
            android:contentDescription="@drawable/ic_baseline_arrow_back_24"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/fgt_postcrt_date"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/PostDateContent"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="@color/placeholderColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/fgt_pwd_validate_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgt_postcrt_mediaLink"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/fgt_postcrt_mediaLink"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/fgt_postcrt_media"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/placeholderColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/fgt_postcrt_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:ignore="LabelFor,TextFields" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="236dp"
            android:layout_height="250dp"
            android:hint="@string/PostBodyContent"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/fgt_postcrt_mediaLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgt_back_btn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fgt_postcrt_body_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textSize="11dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/fgt_pwd_validate_btn"

            style="@style/mediatech.btn"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/validateRecoverContent"
            android:textColor="@color/cpmeMainRed"
            app:backgroundTint="#EEEEEE"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>